# amethyst

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
ci/: 00-setup.sh  01-compile.sh  build.sh
cmake/: emscripten-toolchain.cmake
src/: CMakeLists.txt
src/AmethystCommon/: CMakeLists.txt
src/AmethystServer/: CMakeLists.txt
src/Client/: CMakeLists.txt
src/Client/AmethystClient/: AmethystClient.cpp  CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/AmethystCore/: CMakeLists.txt  CoreEvents.hpp  DummySystem.cpp  DummySystem.hpp  EventLink.hpp  EventLoop.hpp  EventPool.cpp  EventPool.hpp  Events.hpp  System.hpp
src/Server/: CMakeLists.txt
src/Server/AmethystServer/: CMakeLists.txt
